objects/Case.object
<CustomObject>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <businessProcesses>
        <fullName>Documents</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Geschlossen</fullName>
        </values>
        <values>
            <fullName>Geschlossen ohne Rückmeldung</fullName>
        </values>
        <values>
            <fullName>In Bearbeitung</fullName>
        </values>
        <values>
            <fullName>Neu</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Vertragsmanagement</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Geschlossen</fullName>
        </values>
        <values>
            <fullName>Geschlossen ohne Rückmeldung</fullName>
        </values>
        <values>
            <fullName>In Bearbeitung</fullName>
        </values>
        <values>
            <fullName>Neu</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Neuanmeldung Klinik</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Geschlossen</fullName>
        </values>
        <values>
            <fullName>Geschlossen ohne Rückmeldung</fullName>
        </values>
        <values>
            <fullName>In Bearbeitung</fullName>
        </values>
        <values>
            <fullName>Neu</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Document__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unterlagen</label>
        <referenceTo>Dokumente__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DayCounter__c</fullName>
        <formula>IF(TEXT(T_ClosedDate__c) == &quot;&quot;, TEXT(DocumentValidUntil__c - TODAY()) &amp; IF(DocumentValidUntil__c - T_ClosedDate__c = 1, &quot; Tag &quot;, &quot; Tage &quot;) &amp; &quot;bis Dokument abläuft&quot;, TEXT(DocumentValidUntil__c - T_ClosedDate__c) &amp; IF(DocumentValidUntil__c - TODAY() = 1, &quot; Tag &quot;, &quot; Tage &quot;) &amp; &quot;bis Dokument abläuft&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day Counter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentType__c</fullName>
        <formula>TEXT(Document__r.TypeOfDocument__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_ClosedDate__c</fullName>
        <defaultValue>NULL</defaultValue>
        <label>[T]_Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DocumentValidUntil__c</fullName>
        <formula>IF(ISNULL(Document__r.ValidUntil__c) &amp;&amp;  ISNULL( Document__r.CardUsageValidUntil__c ), NULL,
IF(ISNULL(Document__r.ValidUntil__c), Document__r.CardUsageValidUntil__c,
IF(ISNULL(Document__r.CardUsageValidUntil__c), Document__r.ValidUntil__c,
IF(Document__r.CardUsageValidUntil__c &lt; Document__r.ValidUntil__c, Document__r.CardUsageValidUntil__c,
Document__r.ValidUntil__c
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Valid Until</label>
        <type>Date</type>
    </fields>
    <recordTypes>
        <fullName>Documents</fullName>
        <active>true</active>
        <businessProcess>Documents</businessProcess>
        <label>Documents</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vertragsmanagement_Cases</fullName>
        <active>true</active>
        <businessProcess>Vertragsmanagement</businessProcess>
        <label>Vertragsmanagement Cases</label>
    </recordTypes>
    <recordTypes>
        <fullName>Neuanmeldung_Klinik_Praxis</fullName>
        <active>true</active>
        <businessProcess>Neuanmeldung Klinik</businessProcess>
        <label>Neuanmeldung Klinik/Praxis</label>
    </recordTypes>
</CustomObject>